# mandelbrot

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  main.cpp  mainglcu.cpp  mandelbrot.h  mb_cuda.cu  mb_single.cpp  render.cu  render.h  sdlmain_cuda.cpp
src/lib/: CMakeLists.txt
